fix hero spacing in homepage

--- a/bibliobrowse-app/src/pages/home.module.css
+++ b/bibliobrowse-app/src/pages/home.module.css
@@ -8,7 +8,7 @@
   display: flex;
   flex-direction: row;
   padding: 25px;
-  height: 500px;
+  height: 411px;
 }
 
 .heroImage {
@@ -33,6 +33,7 @@
   flex-direction: column;
   padding: 25px;
   max-width: 573px;
+  height: fit-content;
   z-index: 2;
 }
 
@@ -45,5 +46,14 @@
     padding: 12px;
     padding-left: 24px;
     padding-right: 24px;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .hero {
+    height: 471px;
+  }
+  .heroImage {
+    height: 560px;
   }
 }
